kubernetes/apps/dev/prefect/server/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prefect-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prefect.toskbot.xyz`)
      kind: Rule
      services:
        - name: prefect-server
          port: server-svc-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-ui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: prefect.toskbot.xyz
